2008-10-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: test/Makefile.in
	  Suppress Boehm-gc's warning message.

2008-10-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, test/config.scm, test/session.scm
	  Drop procedure "kahua-init" because Kahua cannot work without any site bundle.
	  You must use kahua-common-init instead of kahua-init.

	* Change: src/kahua/config.scm.in, src/Makefile.in
	          test/sandbox.scm, test/config.scm, test/kahua-call-with-current-context.scm,
	          test/lambdabooks.scm, test/foldlist.scm, test/redirectcont.scm,
	          test/developer.scm, test/nqueen.scm, test/plugin.scm, test/query.scm,
	          test/server.scm, test/shell.scm, test/worker.scm, test/wiki-iki.scm,
	          test/entry-method.scm, test/httpd.scm, test/admin.scm, test/rollback.scm,
	          test/spvr.scm, test/multi-paging.scm, test/dead-lock.scm
	  Remove: src/make-testconf.scm, src/custom.conf.sample
	  <kahua-config> is now based on <kahua:object-pool-mixin> and <kahua:read-only-mixin>,
	  and kahua-config is now a parameter instead of a procedure.
	  So test scripts are made fit to this change, and now run on site bundle instead of
	  temporary working directory and test.conf.

2008-10-17  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* add contrib/staging/playback-httplog.scm

2008-10-10  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: src/kahua/object-pool.scm, test/object-pool.scm
	  A simple object pooling library is added. This is very experimental but
	  in order to prepare to modify kahua.config module.  The kahua.object-pool
	  module export classes <kahua:object-pool-meta>, <kahua:object-pool-mixin>,
	  <kahua:read-only-meta> and <kahua:read-only-mixin>.

2008-10-10  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* src/kahua/protocol/worker.scm (make-socket-to-worker): logging when error occured.

2008-10-10  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in, test/config.scm