@@ -1,3 +1,10 @@
+2008-10-28  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua-spvr.scm, src/kahua-httpd.scm,
+	          src/kahua-keyserv.scm, src/kahua-server.scm
+	  Now child processes check spvr is alive or not via pipe,
+	  and kill themselves if spvr has gone.
+
 2008-10-25  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: test/Makefile.in
